<resources>
    <string name="app_name">AAcademy</string>
    <string name="film_title_label">Avengers: End Game</string>
    <string name="tag_line_label">Action, Adventure, Fantasy</string>
    <string name="review_count_label">125 REVIEWS</string>
    <string name="pg_mark_label">13+</string>
    <string name="description_label">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="storyline_label">Storyline</string>
    <string name="cast_label">Cast</string>
    <string name="avatar_1_label">Robert Downey Jr.</string>
    <string name="avatar_2_label">Chris Evans</string>
    <string name="avatar_3_label">Mark Ruffalo</string>
    <string name="avatar_4_label">Chris Hemsworth</string>
    <string name="back_label">Back</string>
</resources>